Address first review: fix handshake leak and JSON-RPC id disambiguation
- Destroy/release the transport when the initialize handshake fails, instead of
  leaking a started subprocess (StdioMcpConnection constructor now cleans up).
- Skip any message carrying a "method" field in the JSON-RPC read loop, so a
  server-initiated request (e.g. ping) whose id collides with ours is never
  mistaken for the response and cannot desync the stream.
- close() now releases the stdio streams (deterministic fd release) before
  destroying the transport, replacing the dead UncheckedIOException catch.
- Synchronize JsonRpcPeer request/notify so an accidentally shared connection
  serializes instead of corrupting the framing.
- Tolerate a null-valued entry in a tool's inputSchema (Map.copyOf rejected it).
- Document that reads block with no timeout (a hung-but-alive server blocks).

Tests: handshake failure releases the transport; a colliding server request id is
skipped (peer and connection level); a tools/call JSON-RPC error propagates; a
null-valued schema entry is tolerated.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HgPncTwCg86JeasZ5R3X1Z